<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remote Data</string>
    <string name="action_settings">Settings</string>
    <string name="single_query">Justin</string>
    <string name="all_query">All</string>
    <string name="status_query">Part Time</string>
    <string name="header_name">Associate Name</string>
    <string name="header_phone">Phone</string>
    <string name="header_email">Email</string>
    <string name="header_comp">Comp ID</string>
    <string name="header_status">Status</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="compId">Comp ID</string>
    <string name="status">Full Time / Part Time</string>
    <string name="status2">Status</string>
    
    <string name="buttonAdd">Add Associate</string>
    <string name="buttonSave">Save</string>
    <string name="buttonEdit">Edit</string>
    <string name="buttonDelete">Delete</string>
    <string name="menuAdd">Add</string>
    
    <string name="hint_firstName">ex. Sam</string>
    <string name="hint_lastName">ex. Doe</string>
    <string name="hint_phone">ex. 555#8211555#82115555</string>
    <string name="hint_email">ex. samdoe@email.com</string>
    <string name="hint_comp">ex. 12345</string>
    <string name="hint_status">ex. Full Time</string>
    

</resources>
