<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/add_firstName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/firstName" />

    <EditText
        android:id="@+id/add_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_firstName_label"
        android:layout_below="@+id/add_firstName_label"
        android:ems="10"
        android:hint="@string/hint_firstName"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/add_lastName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_firstName"
        android:layout_below="@+id/add_firstName"
        android:layout_marginTop="10dp"
        android:text="@string/lastName" />

    <EditText
        android:id="@+id/add_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_lastName_label"
        android:layout_below="@+id/add_lastName_label"
        android:ems="10"
        android:hint="@string/hint_lastName"
        android:inputType="textCapWords" />

    <TextView
        android:id="@+id/add_phoneNumber_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_lastName"
        android:layout_below="@+id/add_lastName"
        android:layout_marginTop="10dp"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/add_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_phoneNumber_label"
        android:layout_below="@+id/add_phoneNumber_label"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="phone" />

    <TextView
        android:id="@+id/add_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_phone"
        android:layout_below="@+id/add_phone"
        android:layout_marginTop="10dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/add_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_email_label"
        android:layout_below="@+id/add_email_label"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/add_comp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_email"
        android:layout_below="@+id/add_email"
        android:layout_marginTop="10dp"
        android:text="@string/compId" />

    <EditText
        android:id="@+id/add_comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_comp_label"
        android:layout_below="@+id/add_comp_label"
        android:ems="10"
        android:hint="@string/hint_comp"
        android:inputType="number" />

    <TextView
        android:id="@+id/add_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_comp"
        android:layout_below="@+id/add_comp"
        android:layout_marginTop="10dp"
        android:text="@string/status" />

    <EditText
        android:id="@+id/add_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add_status_label"
        android:layout_below="@+id/add_status_label"
        android:ems="10"
        android:hint="@string/hint_status"
        android:inputType="textCapWords" />

    <Button
        android:id="@+id/add_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/buttonAdd" />

</RelativeLayout>
