<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#fff"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/buttonHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:orientation="horizontal" >
    
    <Button
        android:id="@+id/single_associate_button"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/AppBaseTheme"
        android:text="@string/single_query" />

    <Button
        android:id="@+id/all_associates_button"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/AppBaseTheme"
        android:text="@string/all_query" />

    <Button
        android:id="@+id/status_button"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/AppBaseTheme"
        android:text="@string/status_query" 
        android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/buttonHolder"
        android:background="#fff"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/name_header"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="5dp"
            android:text="@string/header_name"
            android:textColor="#000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone_header"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/header_phone"
            android:textColor="#000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_header"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="5dp"
            android:text="@string/header_email"
            android:textColor="#000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/compId_header"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/header_comp"
            android:textColor="#000"
            android:textSize="12sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/status_header"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:text="@string/header_status"
            android:textColor="#000"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/listLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:orientation="horizontal" >
        
        <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:dividerHeight="0dp" >
    </ListView>
    
    </LinearLayout>

    

</RelativeLayout>

